# tennis-scorer

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  Shuttle.toml  build-watchos.sh  cbindgen.toml  docker-compose.yml  fly.toml
.cargo/: config.toml
.github/workflows/: deploy.yml  rust.yml  watchos.yml
WatchApp/TennisScorer Watch App/: ContentView.swift  Info.plist  SpeechRecognizer.swift  TennisMatch.swift  TennisScorerApp.swift
WatchApp/TennisScorer Watch App/Models/: MatchEventRecord.swift  MatchRecord.swift
WatchApp/TennisScorer Watch App/Services/: APIClient.swift  KeychainHelper.swift  SyncService.swift
WatchApp/TennisScorer Watch App/Views/: AuthView.swift  MatchHistoryView.swift
WatchApp/TennisScorer Watch AppTests/: SpeechRecognizerTests.swift
WatchApp/TennisScorer.xcodeproj/: project.pbxproj
crates/tennis-scorer/: Cargo.toml
crates/tennis-scorer-api/: .env.example  Cargo.toml
crates/tennis-scorer-api/migrations/: 001_create_users.sql  002_create_matches.sql  003_create_match_events.sql
crates/tennis-scorer-api/src/: config.rs  db.rs  error.rs  lib.rs  main.rs
crates/tennis-scorer-api/src/auth/: handlers.rs  jwt.rs  middleware.rs  mod.rs
crates/tennis-scorer-api/src/matches/: handlers.rs  mod.rs  models.rs
crates/tennis-scorer-api/src/stats/: handlers.rs  mod.rs
crates/tennis-scorer-api/tests/: integration.rs
crates/tennis-scorer-uniffi/: Cargo.toml
crates/tennis-scorer-uniffi/src/: lib.rs
docs/plans/: 2026-02-06-backend-and-cicd-design.md  2026-02-06-new-features-design.md  2026-02-13-system-architecture-design.md
include/: module.modulemap  tennis_scorer.h
src/: ffi.rs  game.rs  history.rs  lib.rs  match_state.rs  types.rs
(+172 files in other folders)
