[package]
name = "tennis-scorer-api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tennis-scorer-api"
path = "src/main.rs"

[lib]
name = "tennis_scorer_api"
path = "src/lib.rs"

[dependencies]
tennis-scorer = { path = "../tennis-scorer" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
argon2 = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
